...
        android:orientation="horizontal"
        android:layout_below="@+id/idTextViewStepDesc">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/idButtonPrevStep"
            android:text="@string/prevButton"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nextButton"
            android:layout_weight="1"
            android:id="@+id/idButtonNextStep"
            android:layout_alignParentRight="true"
            />

    </LinearLayout>
</RelativeLayout>

