...
                android:layout_marginBottom="@dimen/four"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gold_color"
                android:paddingLeft="@dimen/ten_dp"
                android:id="@+id/idRecyclerViewIngredient"></android.support.v7.widget.RecyclerView>

        </LinearLayout>
            </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/sixteendp"
        android:layout_height="match_parent"
        android:id="@+id/idRecyclerViewSteps">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>

</android.support.v4.widget.NestedScrollView>
...
